# gpt

./: .gitignore  CMakeLists.txt  LICENSE  Transformer.md  logger.c  logger.h  model.cpp  requirements.txt  setup.sh  specs.sh  tokenizer.cpp  tokenizer.h  unicode-data.cpp  unicode-data.h  unicode.cpp  unicode.h
docs/: build.md  tokenizer.md  transformer.md
models/mistralai/Mistral-7B-Instruct-v0.1/: config.json  tokenizer.json  tokenizer_config.json
models/openai-community/gpt2/: config.json  tokenizer.json  tokenizer_config.json
